--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,4 +14,8 @@ sonar.sources=app.py
 sonar.language=py
 sonar.python.version=3.10
 
+# Determinar Quality Gate como Bloqueante
 sonar.qualitygate.wait=true
+
+# Considerar o relatório de cobertura de Código
+sonar.python.coverage.reportPaths=coverage.xml
